[metadata]
name = Chiplotle
version = 0.4.1
author = Víctor Adán and Douglas Repetto
author_email = chiplotle@music.columbia.edu
description = Chiplotle is an HPGL Python API.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://music.columbia.edu/cmc/chiplotle
classifiers =
    Programming Language :: Python :: 3
    License :: GPL
    Operating System :: OS Independent
scripts = 
    chiplotle/scripts/envelope.py
    chiplotle/scripts/find_hpgl_file_dimensions.py
    chiplotle/scripts/plot_hpgl_file_max_size.py
    chiplotle/scripts/plot_hpgl_file.py
    chiplotle/scripts/plot_hpgl_file_virtual.py
    chiplotle/scripts/typewriter.py
    chiplotle/scripts/view_hpgl_file.py

[options]
install_requires = 
    pyserial
    numpy
    apply
    future
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chiplotle = chiplotle.core.cfg._run_chiplotle:_run_chiplotle