[metadata]
name = Chiplotle3
version = 0.4.1
author = Víctor Adán and Douglas Repetto
author_email = chiplotle@music.columbia.edu
description = Chiplotle is an HPGL Python API.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://music.columbia.edu/cmc/chiplotle
classifiers =
    Programming Language :: Python :: 3
    License :: GPL
    Operating System :: OS Independent
scripts = 
    chiplotle3/scripts/envelope.py
    chiplotle3/scripts/find_hpgl_file_dimensions.py
    chiplotle3/scripts/plot_hpgl_file_max_size.py
    chiplotle3/scripts/plot_hpgl_file.py
    chiplotle3/scripts/plot_hpgl_file_virtual.py
    chiplotle3/scripts/typewriter.py
    chiplotle3/scripts/view_hpgl_file.py

[options]
install_requires = 
    pyserial
    numpy
    apply
    future
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chiplotle3 = chiplotle3.core.cfg._run_chiplotle:_run_chiplotle