[metadata]
name = Chiplotle3
version = 0.4.3
author = Víctor Adán and Douglas Repetto
author_email = chiplotle@music.columbia.edu
description = Chiplotle is an HPGL Python API.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://music.columbia.edu/cmc/chiplotle
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires = 
    pyserial
    numpy
    apply
    future
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chiplotle3 = chiplotle3.core.cfg._run_chiplotle:main
    chiplotle3_virtual = chiplotle3.core.cfg._run_chiplotle_virtual:main
    envelope = chiplotle3.scripts.envelope:envelope
    find_hpgl_file_dimensions = chiplotle3.scripts.find_hpgl_file_dimensions:main
    plot_hpgl_file_max_size = chiplotle3.scripts.plot_hpgl_file_max_size:main
    plot_hpgl_file = chiplotle3.scripts.plot_hpgl_file:main
    plot_hpgl_file_virtual = chiplotle3.scripts.plot_hpgl_file_virtual:main
    typewriter = chiplotle3.scripts.typewriter:typewriter
    view_hpgl_file = chiplotle3.scripts.view_hpgl_file:main
